bug that was not showing proper submit button style in iOS fixed

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -450,6 +450,7 @@ input:-webkit-autofill {
     -webkit-text-fill-color: white !important;
 }
 .submit {
+    -webkit-appearance: none;
     margin-top: 15px;
     font-family: Bold Sarabun;
     padding: 0.8em 1em;
